<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:gravity="center"
        android:lineSpacingMultiplier="1.2"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/unfinished_dubbing_tip"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/GRAY" />

    <TextView
        android:id="@+id/tv_continue_dubbing"
        style="@style/DialogItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:text="@string/continue_dubbing" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/GRAY" />

    <TextView
        android:id="@+id/tv_save_draft"
        style="@style/DialogItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:text="@string/save_draft" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/GRAY" />

    <TextView
        android:id="@+id/tv_return_direct"
        style="@style/DialogItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:text="@string/return_direct" />
</LinearLayout>