<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/uploadimage_toolbar"
        layout="@layout/partial_toolbar" />

    <LinearLayout
        android:id="@+id/uploadimage_upper_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/uploadimage_toolbar"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/uploadimage_user_iv"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/user_img" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_image_current"
                android:textColor="#a7a8a8" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/upload_image_text"
            android:textColor="#777777"
            android:textSize="14sp" />

        <Button
            android:id="@+id/uploadimage_submit_btn"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_shape"
            android:text="@string/upload_image_complete"
            android:textColor="@color/WHITE" />
    </LinearLayout>

    <ImageView
        android:id="@+id/uploadimage_divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/uploadimage_upper_ll"
        android:layout_margin="5dp"
        android:background="#7caed6"
        android:gravity="center"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/uploadimage_divider"
        android:layout_margin="5dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/uploadimage_camera_btn"
            android:layout_width="240dp"
            android:layout_height="43dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_shape"
            android:text="@string/upload_image_by_camera"
            android:textColor="@color/WHITE" />

        <Button
            android:id="@+id/uploadimage_local_btn"
            android:layout_width="240dp"
            android:layout_height="43dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_shape"
            android:text="@string/upload_image_by_local"
            android:textColor="@color/WHITE" />

        <Button
            android:id="@+id/uploadimage_skip_btn"
            android:layout_width="240dp"
            android:layout_height="43dp"
            android:background="@drawable/button_shape"
            android:text="@string/upload_image_skip"
            android:textColor="@color/WHITE" />
    </LinearLayout>

</RelativeLayout>