<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="6dp"
    android:paddingBottom="6dp">

    <TextView
        android:id="@+id/comment_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/comment"
        android:textColor="@color/GREEN"
        android:textSize="16sp"
        android:drawableLeft="@drawable/comment"
        android:drawablePadding="2dp"/>

    <TextView
        android:id="@+id/share_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/share"
        android:textColor="@color/GREEN"
        android:textSize="16sp"
        android:drawableRight="@drawable/share"
        android:drawablePadding="2dp"/>

    <TextView
        android:id="@+id/dubbing_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_want_dubbing"
        android:textColor="@color/WHITE"
        android:textSize="16dp"
        android:layout_centerInParent="true"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:background="@drawable/green_corner"/>
</RelativeLayout>