<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_my_dubbing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_dubbing_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:popupTheme="@style/ToolbarPopupTheme"
        app:theme="@style/ToolbarTheme"
        app:titleTextAppearance="@style/ToolbarTitle">
        <TextView
            android:id="@+id/select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="18dp"
            android:text="@string/select_all"
            android:textColor="@color/WHITE"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/edit_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="18dp"
            android:text="@string/edit"
            android:textColor="@color/WHITE"
            android:textSize="16sp" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/my_dubbing_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/WHITE"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/colorPrimary"
        app:tabMode="fixed" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/delete_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/delete"
        android:textColor="@color/WHITE"
        android:textSize="18sp"
        android:visibility="gone" />
</LinearLayout>
