<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/login_toolbar"
        layout="@layout/partial_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="22dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logo_iv"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/logo_old" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/login_username_phone_ll"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@drawable/edit_text_bkg"
                android:paddingLeft="5dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/username_icon" />

                <EditText
                    android:id="@+id/login_username_edt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/login_username_hint"
                    android:textSize="14sp"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textCursorDrawable="@null" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_pwd_ll"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_bkg"
                android:paddingLeft="5dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/pwd_icon" />

                <EditText
                    android:id="@+id/login_pwd_edt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textCursorDrawable="@null" />
            </LinearLayout>
            <TextView
                android:id="@+id/register_protocol_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:drawableLeft="@drawable/checkbox_unchecked"
                android:drawablePadding="5dp"/>

            <CheckBox
                android:id="@+id/login_auto_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical"
                android:text="@string/login_auto_login"
                android:visibility="gone"
                android:textColor="#6d6d6d" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/login_register_btn"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_gravity="left"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_grey_button"
                    android:text="@string/login_register"
                    android:textColor="#4d494d" />

                <androidx.legacy.widget.Space
                    android:layout_width="30dp"
                    android:layout_height="0dp" />

                <Button
                    android:id="@+id/login_login_btn"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_gravity="right"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_green_button"
                    android:text="@string/login"
                    android:textColor="#fff" />
            </LinearLayout>

            <TextView
                android:id="@+id/login_reset_pwd_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="12dp"
                android:text="@string/login_find_password" />

            <TextView
                android:id="@+id/space"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:textColor="#000000" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
