<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/linear_express"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#6a6a6a"
        android:focusable="false"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/search_btn"
            android:layout_width="56dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:background="@drawable/button_background"
            android:text="@string/alert_btn_ok"
            android:visibility="gone"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="12dp"
            android:layout_toLeftOf="@+id/search_btn"
            android:background="@drawable/border"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" >

            <EditText
                android:id="@+id/search_et"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="#00000000"
                android:hint="@string/search_word_hint"
                android:singleLine="true"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/clear_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/word_clear_button" />
        </RelativeLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/dialog_action_cancel"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/school_list"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@id/cancel_btn"
        android:layout_below="@id/linear_express"
        android:cacheColorHint="#00000000"
        android:divider="#dcdcdc"
        android:dividerHeight="1dp"
        android:fastScrollEnabled="true" >
    </androidx.recyclerview.widget.RecyclerView>

</RelativeLayout>